--- a/admin_html/landing_admin.html
+++ b/admin_html/landing_admin.html
@@ -13,12 +13,59 @@
     />
   </head>
   <body>
-    <main class="container-fluid"></main>
+    <main
+      class="container-fluid text-center"
+      style="background-color: lightslategray; height: 100vh"
+    >
+      <nav class="row">
+        <h1 class="col-12 text-center">Administrator Settings</h1>
+      </nav>
+      <section class="row g-2">
+        <div class="col">
+          <div id="viewOrders" type="button" class="btn btn-light">
+            View Orders
+          </div>
+        </div>
+        <div class="col">
+          <div id="viewOrders" type="button" class="btn btn-danger">
+            Delete Current Order
+          </div>
+        </div>
+      </section>
+      <section class="row g-2">
+        <div class="col">
+          <div id="editEmployees" type="button" class="btn btn-light">
+            Edit Employees
+          </div>
+        </div>
+        <div class="col">
+          <div id="editMenu" type="button" class="btn btn-light">Edit Menu</div>
+        </div>
+      </section>
+    </main>
+
     <!-- BOOTSTRAP  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Temporary CSS Code to be Transported to CSS when its time -->
+    <style>
+      nav {
+        background-color: whitesmoke;
+        margin-bottom: 100px;
+      }
+
+      .btn {
+        justify-content: center;
+        margin: 10px;
+        height: 200px;
+        line-height: 200px;
+        width: 200px;
+        border-radius: 20px;
+      }
+    </style>
   </body>
 </html>
