--- a/public/landing_admin.html
+++ b/public/landing_admin.html
@@ -18,32 +18,35 @@
       style="background-color: lightslategray; height: 100vh"
     >
       <nav class="row">
-        <h1 class="col-12 text-center">Administrator Settings</h1>
+        <div class="col-2 btn small-btn btn-secondary">Back</div>
+        <h1 class="col text-center">Administrator Settings</h1>
+        <div class="col-2 btn small-btn btn-secondary">Customize</div>
       </nav>
       <section class="row g-2">
         <div class="col">
-          <div id="viewOrders" type="button" class="btn btn-light">
+          <div id="viewOrders" type="button" class="btn big-btn btn-light">
             View Orders
           </div>
         </div>
         <div class="col">
-          <div id="viewOrders" type="button" class="btn btn-danger">
+          <div id="viewOrders" type="button" class="btn big-btn btn-danger">
             Delete Current Order
           </div>
         </div>
       </section>
       <section class="row g-2">
         <div class="col">
-          <div id="editEmployees" type="button" class="btn btn-light">
+          <div id="editEmployees" type="button" class="btn big-btn btn-light">
             Edit Employees
           </div>
         </div>
         <div class="col">
-          <div id="editMenu" type="button" class="btn btn-light">Edit Menu</div>
+          <div id="editMenu" type="button" class="btn big-btn btn-light">
+            Edit Menu
+          </div>
         </div>
       </section>
     </main>
-
     <!-- BOOTSTRAP  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -58,7 +61,11 @@
         margin-bottom: 100px;
       }
 
-      .btn {
+      .small-btn {
+        margin: 5px;
+      }
+
+      .big-btn {
         justify-content: center;
         margin: 10px;
         height: 200px;
