--- a/public/headers.html
+++ b/public/headers.html
@@ -11,27 +11,31 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <main>
       <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <img
-            src="../../public/images/Logo.png"
+            src="../public/images/Logo.png"
             alt="Mercury Logo"
-            class="navbar-brand"
+            class="navbar-brand logo"
           />
-          <p>Server Name | Table Name</p>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasDarkNavbar"
-            aria-controls="offcanvasDarkNavbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <div class="d-flex">
+            <p class="current-server-table navbar-text">
+              Server Name | Table Name &emsp;
+            </p>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasDarkNavbar"
+              aria-controls="offcanvasDarkNavbar"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
           <div
             class="offcanvas offcanvas-end text-bg-dark"
             tabindex="-1"
@@ -49,16 +53,23 @@
                 aria-label="Close"
               ></button>
             </div>
+
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Take Lunch</a>
+                  <a class="nav-link" href="#"
+                    ><p class="settings-item">Take Lunch</p></a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Admin Settings</a>
+                  <a class="nav-link" href="#"
+                    ><p class="settings-item">Admin Settings</p></a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Logout</a>
+                  <a class="nav-link" href="#"
+                    ><p class="settings-item">Logout</p></a
+                  >
                 </li>
               </ul>
             </div>
