created used and merchant login handlebars

--- a/public/headers.html
+++ b/public/headers.html
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <img
-            src="../public/images/Logo.png"
+            src="../public/images/MercuryLogo.png"
             alt="Mercury Logo"
             class="navbar-brand logo"
           />
