--- a/public/landingAdmin.html
+++ b/public/landingAdmin.html
@@ -11,7 +11,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/adminStyle.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <main>
