--- a/public/tablemap.html
+++ b/public/tablemap.html
@@ -1,1 +1,55 @@
-im doing this 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tables</title>
+  <link rel="stylesheet" href="css/tables.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+</head>
+
+<body>
+  <header>Tables</header>
+  <div class="container">
+    <div class="row1 d-flex justify-content-evenly">
+      <button class="button">Table 1</button>
+      <button class="button">Table 2</button>
+      <button class="button">Table 3</button>
+    </div>
+    <div class="row2 d-flex justify-content-evenly">
+      <button class="button">Table 2</button>
+      <button class="button">Table 3</button>
+      <button class="button">Table 4</button>
+    </div>
+    <div class="row3 d-flex justify-content-evenly">
+      <button class="button">Table 5</button>
+      <button class="button">Table 6</button>
+      <button class="button">Table 7</button>
+    </div>
+  </div>
+
+
+  <div>
+    <h2 class="barHeader baseline"> Bar </h2>
+  </div>
+
+  <div class="barRow d-flex justify-content-evenly">
+    <button class="button">Seat 1</button>
+    <button class="button">Seat 2</button>
+    <button class="button">Seat 3</button>
+      <button class="button">Seat 4</button>
+      <button class="button">Seat 5</button>
+  </div>
+
+
+
+  <div class="adminBtn "> <button id="adminBtn" type="button" class="btn btn-primary justify-content-end">Admin
+      Settings</button>
+
+  </div>
+</body>
+
+</html>
