created checkout template

--- a/public/headers.html
+++ b/public/headers.html
@@ -22,6 +22,7 @@
             alt="Mercury Logo"
             class="navbar-brand logo"
           />
+          <div><p>abc</p></div>
           <div class="d-flex">
             <p class="current-server-table navbar-text">
               Server Name | Table Name &emsp;
