commented Paul's checkout html out, you guys can work that out tomorrow

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -31,7 +31,7 @@
         </button>
       </div>
 
-      <div class="allBtns" >
+      <div class="allBtns">
         <div class="buttons">
           <button type="button" class="btn btn-primary payBtn">
             Pay/Print Reciept
@@ -51,7 +51,8 @@
     </div>
   </body>
 </html>
-*******PAUL******
+
+<!-- *******PAUL******
     <link rel="stylesheet" href="./css/checkout.css" />
   </head>
   <body>
@@ -60,9 +61,9 @@
         <section
           class="receipts d-flex justify-content-center bg-dark"
           id="insertReceipts"
-        >
-          <!-- template -->
-          <!-- <div class="card receipt">
+        > -->
+<!-- template -->
+<!-- <div class="card receipt">
             <div class="card-body">
               <h5 class="card-title receipt-title">Hydrargyrum Inc.</h5>
               <div class="container">
@@ -180,11 +181,11 @@
               </div>
             </div>
           </div> -->
-        </section>
-      </div>
+<!-- </section>
+      </div> -->
 
-      <!-- <script src="./js/script.js"></script> -->
-    </main>
+<!-- <script src="./js/script.js"></script> -->
+<!-- </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
@@ -209,5 +210,4 @@
   </div>
 </div>
 </body>
-</html>
-
+</html> -->
