--- a/public/checkout.html
+++ b/public/checkout.html
@@ -1,16 +1,28 @@
-
-<!-- *******PAUL******
-    <link rel="stylesheet" href="./css/checkout.css" />
+<!-- *******PAUL****** -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mercury POS</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css//checkout.css" />
   </head>
+  <!-- template -->
   <body>
     <main>
       <div id="receipts-page">
         <section
           class="receipts d-flex justify-content-center bg-dark"
           id="insertReceipts"
-        > -->
-<!-- template -->
-<!-- <div class="card receipt">
+        >
+          <div class="card receipt">
             <div class="card-body">
               <h5 class="card-title receipt-title">Hydrargyrum Inc.</h5>
               <div class="container">
@@ -127,12 +139,11 @@
                 </div>
               </div>
             </div>
-          </div> -->
-<!-- </section>
-      </div> -->
-
-<!-- <script src="./js/script.js"></script> -->
-<!-- </main>
+          </div>
+        </section>
+      </div>
+      <!-- <script src="./js/checkout.js"></script> -->
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
@@ -150,12 +161,6 @@
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/checkout.js"></script>
   </body>
 </html>
-
-  </div>
-</div>
-</body>
-</html>
-</html> -->
