added [Edit employee's] view functionality

--- a/public/admin.html
+++ b/public/admin.html
@@ -27,7 +27,7 @@
               View Orders
             </div>
             <div
-              id="viewOrders"
+              id="deleteOrder"
               type="button"
               class="btn action-btn btn-danger"
             >
@@ -44,7 +44,11 @@
               Edit Menu
             </div>
           </div>
-          <div id="sidebarDisplay" class="col-8"></div>
+          <div
+            id="sidebarDisplay"
+            class="col-8"
+            style="overflow-y: scroll; height: 500px"
+          ></div>
         </div>
         <nav id="footer_nav" class="row">
           <div class="col">MERCURY POS</div>
@@ -52,6 +56,7 @@
       </section>
     </main>
     <!-- BOOTSTRAP  -->
+    <script src="./js/admin.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
