Edit employees button works properly with backend

--- a/public/admin.html
+++ b/public/admin.html
@@ -48,6 +48,8 @@
               Delete Order
             </div>
           </div>
+
+          <!-- DISPLAY -->
           <div id="sidebarDisplay" class="col">
             <div id="employeesWrap" class="hide"></div>
             <div id="menuButtonsWrap" class="hide">
