--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -115,7 +115,7 @@
             </div>
           </div>
 
-          <div class="d-flex justify-content-evenly col-md-12 menu-row-1">
+          <div id="menuDisplay" class="d-flex justify-content-evenly col-md-12 menu-row-1">
             <div id="menu-items" class="item-1">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
