--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -11,7 +11,10 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-<script src="https://kit.fontawesome.com/5c22034e45.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/5c22034e45.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -77,7 +80,8 @@
           </table>
 
           <div>
-            <button type="button" class="btn btn-dark send-kitchen"><i class="fa-thin fa-paper-plane-top"></i>
+            <button type="button" class="btn btn-dark send-kitchen">
+              <i class="fa-thin fa-paper-plane-top"></i>
               Send to Kitchen
             </button>
           </div>
@@ -94,9 +98,10 @@
             </table>
           </div>
           <div>
-            <button type="button" class="btn btn-success checkout"><i class="fa-sharp fa-regular fa-credit-card"></i>
+            <button type="button" class="btn btn-success checkout">
+              <i class="fa-sharp fa-regular fa-credit-card"></i>
               Checkout
-           </button>
+            </button>
           </div>
         </div>
 
