added homepage logo with animation and lower btns

--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -127,7 +127,7 @@
           </div>
 
           <div class="d-flex justify-content-evenly col-md-12 menu-row-1">
-            <div id="menu-items" class="item-1">
+            <div id="menu-items" class="item-1 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -136,7 +136,7 @@
               <p>$6.99</p>
             </div>
 
-            <div id="menu-items" class="item-2">
+            <div id="menu-items" class="item-2 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -145,7 +145,7 @@
               <p>$6.99</p>
             </div>
 
-            <div id="menu-items" class="item-3">
+            <div id="menu-items" class="item-3 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -153,7 +153,7 @@
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-4">
+            <div id="menu-items" class="item-4 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -164,7 +164,7 @@
           </div>
 
           <div class="d-flex justify-content-evenly col-md-12">
-            <div id="menu-items" class="item-5">
+            <div id="menu-items" class="item-5 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -172,7 +172,7 @@
               <p class="item-desc">BLT</p>
               <p class="item-price">$6.99</p>
             </div>
-            <div id="menu-items" class="item-6">
+            <div id="menu-items" class="item-6 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -180,7 +180,7 @@
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-7">
+            <div id="menu-items" class="item-7 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -188,7 +188,7 @@
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-8">
+            <div id="menu-items" class="item-8 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -198,7 +198,7 @@
             </div>
           </div>
           <div class="d-flex justify-content-evenly col-md-12">
-            <div id="menu-items" class="item-9">
+            <div id="menu-items" class="item-9 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -206,7 +206,7 @@
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-10">
+            <div id="menu-items" class="item-10 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -214,7 +214,7 @@
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-11">
+            <div id="menu-items" class="item-11 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
@@ -222,7 +222,7 @@
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-12">
+            <div id="menu-items" class="item-12 images">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
                 alt=""
