index.html linked with a tags to login and signup

--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,25 @@
     </div>
 
     <div id="lower-btns">
-      <button id="login" type="button" class="btn btn-dark merchant-login-btn">
-        LOGIN
-      </button>
-      <button id="signup" type="button" class="btn btn-dark merchant-login-btn">
-        SIGN UP
-      </button>
+      <a href="/login"
+        ><button
+          id="login"
+          type="button"
+          class="btn btn-dark merchant-login-btn"
+        >
+          LOGIN
+        </button></a
+      >
+      <a href="/signup"
+        ><button
+          id="signup"
+          type="button"
+          class="btn btn-dark merchant-login-btn"
+        >
+          SIGN UP
+        </button></a
+      >
       <!-- <button type="button" class="btn btn-dark settings-btn">Settings</button> -->
     </div>
-    <script src="./js/homepage.js"></script>
-    <!-- <div id="settings"></div> -->
   </body>
 </html>
