added fix to the landing page, added favicon

--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -127,36 +127,36 @@
           </div>
 
           <div class="d-flex justify-content-evenly col-md-12 menu-row-1">
-            <div id="menu-items" class="item-1 images">
+            <div id="menu-items" class="item-1">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
             </div>
 
-            <div id="menu-items" class="item-2 images">
+            <div id="menu-items" class="item-2">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
             </div>
 
-            <div id="menu-items" class="item-3 images">
+            <div id="menu-items" class="item-3">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-4 images">
+            <div id="menu-items" class="item-4">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
@@ -164,68 +164,68 @@
           </div>
 
           <div class="d-flex justify-content-evenly col-md-12">
-            <div id="menu-items" class="item-5 images">
+            <div id="menu-items" class="item-5">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p class="item-desc">BLT</p>
               <p class="item-price">$6.99</p>
             </div>
-            <div id="menu-items" class="item-6 images">
+            <div id="menu-items" class="item-6">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-7 images">
+            <div id="menu-items" class="item-7">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-8 images">
+            <div id="menu-items" class="item-8">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
             </div>
           </div>
           <div class="d-flex justify-content-evenly col-md-12">
-            <div id="menu-items" class="item-9 images">
+            <div id="menu-items" class="item-9">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-10 images">
+            <div id="menu-items" class="item-10">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-11 images">
+            <div id="menu-items" class="item-11">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
             </div>
-            <div id="menu-items" class="item-12 images">
+            <div id="menu-items" class="item-12">
               <img
                 src="https://images.unsplash.com/photo-1619096252214-ef06c45683e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"
-                alt=""
+                alt="" class="images"
               />
               <p>BLT</p>
               <p>$6.99</p>
