--- a/public/homepage.html
+++ b/public/homepage.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePage</title>
+    <title>Mercury POS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="/public/images/favicon (2).ico">
 </head>
 <body class="homepage-body">
 
@@ -18,6 +19,7 @@
     <div id="lower-btns">
         <button type="button" class="btn btn-dark merchant-login-btn">Merchant <br>LOGIN</button>
         <button type="button" class="btn btn-dark settings-btn">Settings</button>
+        
     </div>
 
     <div id="settings">
