--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -10,7 +10,8 @@
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
-    />
+      />
+      <link rel="icon" href="/public/images/favicon.ico">
     <script
       src="https://kit.fontawesome.com/5c22034e45.js"
       crossorigin="anonymous"
