pushing current chnages

--- a/public/payment.html
+++ b/public/payment.html
@@ -12,7 +12,7 @@
 <form id="EpxCheckoutForm" name="EpxCheckoutForm">
     <div>
         <label for="PAN">Card Number:</label>
-        <input type="text" id="PAN-id" name="PAN" value="4111111111111111" />
+        <input type="text" id="PAN" name="PAN" value="4111111111111111" />
     </div>
 
     <div>
