--- a/public/homepage.html
+++ b/public/homepage.html
@@ -15,22 +15,23 @@
     <link rel="icon" href="/images/favicon.ico" />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   </head>
+  <div id="homepage">
+    <body class="homepage-body">
+      <img id="main-logo1" src="./images/Logo.png" alt="main-logo" />
 
-  <body class="homepage-body">
-    <img id="main-logo1" src="./images/Logo.png" alt="main-logo" />
-
-    <div id="lower-btns">
-      <a href="/login"
-        ><button id="login" type="button" class="btn btn-dark login-btn">
-          LOGIN
-        </button></a
-      >
-      <p class="or">OR</p>
-      <a href="/signup"
-        ><button id="signup" type="button" class="btn btn-dark signup-btn">
-          SIGN UP
-        </button></a
-      >
-    </div>
-  </body>
+      <div id="lower-btns">
+        <a href="/login"
+          ><button id="login" type="button" class="btn btn-dark login-btn">
+            LOGIN
+          </button></a
+        >
+        <p class="or">OR</p>
+        <a href="/signup"
+          ><button id="signup" type="button" class="btn btn-dark signup-btn">
+            SIGN UP
+          </button></a
+        >
+      </div>
+    </body>
+  </div>
 </html>
